--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "dependencies": {
         "apollo-server-express": "^3.0.2",
+        "concurrently": "^6.2.0",
         "express": "^4.17.1",
         "graphql": "^15.5.1",
         "uuid": "^8.3.2"
@@ -16,6 +17,8 @@
     },
     "scripts": {
         "start": "node -r esm server.js",
-        "server": "nodemon -r esm server.js"
+        "server": "nodemon -r esm server.js",
+        "client": "yarn --cwd ./client start",
+        "dev": "concurrently \"yarn server\" \"yarn client\""
     }
 }
